tests/errors/semantic/blocking/DECORATOR_WRONG_NUMBER_TYPES.py
# pylint: disable=missing-function-docstring, missing-module-docstring


def func(n : 'int'):
    return n + m
